Bug 357380 - Unable to delete contacts using Del key
Summary: Unable to delete contacts using Del key
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-01 01:51 UTC by André Marcelo Alvarenga
Modified: 2016-01-03 13:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.1.1
Sentry Crash Report:


Attachments
Context menu (21.52 KB, image/png)
2016-01-02 17:11 UTC, André Marcelo Alvarenga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description André Marcelo Alvarenga 2016-01-01 01:51:48 UTC
In KAddresBook 4.14 I can delete contacts with Del key.

Reproducible: Always
Comment 1 Laurent Montel 2016-01-02 16:37:36 UTC
We never added Del key for removing contact.
But indeed it can be useful.
I will add it.
Comment 2 André Marcelo Alvarenga 2016-01-02 17:11:59 UTC
Created attachment 96415 [details]
Context menu

(In reply to Laurent Montel from comment #1)
> We never added Del key for removing contact.
> But indeed it can be useful.
> I will add it.

Hi Laurent.

In KAddressBook 4.14.1 I can delete a contact using Del key or by context menu. See the screenshot.
Thanks to add this.
Comment 3 Laurent Montel 2016-01-03 13:07:50 UTC
Git commit c8dea9f88d766b0caa664711674656b38b288c78 by Montel Laurent.
Committed on 03/01/2016 at 13:07.
Pushed by mlaurent into branch 'Applications/15.12'.

Fix Bug 357380 - Unable to delete contacts using Del key

FIXED-IN: 5.1.1

M  +1    -1    kaddressbook/mainwidget.cpp

http://commits.kde.org/kdepim/c8dea9f88d766b0caa664711674656b38b288c78