Fix Bug 357380 - Unable to delete contacts using Del key

FIXED-IN: 5.1.1
BUG: 357380